conf/lolita.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go
  name: lolita-go-deployment
  namespace: lolita
spec:
  selector:
    matchLabels:
      app: go
  replicas: 3
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - image: ipv4sec/go:v3
        name: go
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node
  name: lolita-node-deployment
  namespace: lolita
spec:
  selector:
    matchLabels:
      app: node
  replicas: 3
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - image: ipv4sec/node:v3
        name: node
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php
  name: lolita-php-deployment
  namespace: lolita
spec:
  selector:
    matchLabels:
      app: php
  replicas: 3
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - image: ipv4sec/php:v3
        name: php
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go
  name: golang.google.cn
  namespace: lolita
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
  selector:
    app: go
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node
  name: nodejs.cn
  namespace: lolita
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
  selector:
    app: node
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php
  name: www.php.net
  namespace: lolita
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
  selector:
    app: php
  type: NodePort
