conf/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lolita-ingress
  namespace: lolita
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lolita.ui
      http:
        paths:
          - path: /
            backend:
              serviceName: lolita-php
              servicePort: 80
